--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Skindu API/Backend",
   "main": "skindu-api.js",
   "scripts": {
-    "start": "npx babel-node skindu-api.js"
+    "start": "npx babel-node skindu-api.js",
+    "test": "npx mocha --require @babel/register --require @babel/polyfill --timeout 20000 --exit"
   },
   "author": "Gray Hound",
   "license": "ISC",
@@ -21,9 +22,12 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "chai-string": "^1.5.0",
