--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shadowcore-api",
+  "name": "shadow-core-api",
   "version": "0.0.1",
-  "description": "Shadowcore API/Backend",
+  "description": "Shadow-core API/Backend",
   "main": "shadowcore-api.js",
   "scripts": {
     "start": "nodemon --exec npx babel-node shadowcore-api.js",
@@ -14,19 +14,19 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
-    "express-core-basic": "file:../express-core-basic",
-    "express-core-users": "file:../express-core-users",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.4",
+    "mongoose": "^5.5.11",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "shadow-core-basic": "^0.0.2-b",
+    "shadow-core-users": "^0.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.2.2",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
