--- a/package.json
+++ b/package.json
@@ -5,34 +5,35 @@
   "main": "shadowcore-api.js",
   "scripts": {
     "start": "nodemon --exec npx babel-node shadowcore-api.js",
-    "test": "npx mocha --require @babel/register --require @babel/polyfill --timeout 20000 --exit"
+    "test": "npx mocha --require @babel/register --require @babel/polyfill --timeout 20000 --exit ./test/test.js",
+    "test-no-verif": "npx mocha --require @babel/register --require @babel/polyfill --timeout 20000 --exit ./test/testNoVerif.js"
   },
   "author": "Gray Hound",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.2",
+    "async": "^3.1.0",
     "body-parser": "^1.19.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.11",
+    "mongoose": "^5.6.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "shadow-core-basic": "^0.0.2-b",
-    "shadow-core-users": "^0.0.2"
+    "shadow-core-basic": "^0.0.5",
+    "shadow-core-users": "^0.0.9"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.0",
+    "@babel/node": "^7.5.0",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.5.0",
     "@babel/register": "^7.4.4",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "chai-string": "^1.5.0",
     "chai-subset": "^1.6.0",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.1"
   }
 }
