--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "mongoose": "^5.6.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "shadow-core-basic": "^0.0.5",
-    "shadow-core-users": "^0.0.9"
+    "shadow-core-basic": "^0.0.6",
+    "shadow-core-users": "^0.0.10",
+    "shadow-core-auth": "^0.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
