--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "shadow-core-auth": "^0.0.2",
     "shadow-core-basic": "^0.0.6",
     "shadow-core-users": "^0.0.11",
+    "shadow-core-profile": "^0.0.1",
     "yn": "^3.1.0"
   },
   "devDependencies": {
